Fixes for dark mode

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -662,178 +662,3 @@ footer:after {
 	padding-bottom: 0.5rem;
 	color: #b73275;
 }
-
-/*-------
-Colors
-_______*/
-.white {
-	color: #ffffff !important;
-}
-
-.black {
-	color: #0a0a11;
-}
-
-.blue {
-	color: #6667ab;
-}
-
-.pink {
-	color: #b73275 !important;
-}
-
-.violet {
-	color: #544275;
-}
-
-.light {
-	color: #e0e1ee !important;
-}
-
-.dark {
-	color: #333456;
-}
-
-/*-------
-Dark mode
-_______*/
-
-:root {
-	color-scheme: light dark;
-}
-
-body {
-	--text-color: #333456;
-	--bkg-color: #FFFFFF;
-}
-
-body.dark-theme {
-	--text-color: #E5E5E5;
-	--bkg-color: #161616;
-	--bs-body-color: #E5E5E5;
-}
-
-body {
-	background-color: var(--bkg-color);
-}
-
-h1,
-p {
-	color: var(--text-color);
-}
-
-body.dark-theme img {
-	filter: brightness(.8) contrast(1.2);
-}
-
-body.dark-theme .widget_grey, body.dark-theme .widget_pages, body.dark-theme .bg-violet {
-	background-color: #525289 !important;
-	color: #E5E5E5;
-}
-
-body.dark-theme .widget_grey .btn, body.dark-theme .widget_grey .form-control {
-	border: 3px dashed white;
-}
-
-.display-5 {
-	color: var(--text-color);
-}
-
-body.dark-theme a {
-	color: #f1469c;
-}
-
-body.dark-theme a:hover {
-	color: #f1469c !important;
-}
-
-body.dark-theme #btn-toggle {
-	background-color: #333456;
-}
-
-body.dark-theme .text-dark {
-	color: #FFFFFF !important;
-}
-
-body.dark-theme .widget a {
-	color: #E5E5E5;
-}
-
-body.dark-theme .widget a:hover {
-	text-decoration: underline;
-}
-
-body.dark-theme #primary-nav {
-	background-color: #333456 !important;
-}
-
-body.dark-theme #primary-nav:after {
-	box-shadow: 0 0 0 120px #333456;
-}
-
-body.dark-theme footer {
-	background-color: #202136 !important;
-}
-
-body.dark-theme footer:after {
-	box-shadow: 0 90px 0 120px #202136;
-}
-
-body.dark-theme input, body.dark-theme textarea, body.dark-theme .form-control:focus, body.dark-theme checkbox {
-	background-color: var(--bkg-color);
-	color: var(--text-color);
-}
-
-body.dark-theme .form-control::placeholder {
-	color: var(--text-color);
-}
-
-body.dark-theme .form-floating > .form-control::placeholder {
-	color: transparent;
-}
-
-body.dark-theme .widget_outline_grey {
-	border: 5px solid #525289 !important;
-	background-color: #000000 !important;
-}
-
-body.dark-theme .widget_grey .btn.bg-white {
-	background-color: var(--bkg-color) !important;
-}
-
-body.dark-theme .card {
-	background-color: var(--bkg-color);
-	color: var(--text-color);
-}
-
-body.dark-theme .comment-date small.text-muted, body.dark-theme .alert {
-	color: #FFFFFF !important;
-	background-color: #333456 !important;
-}
-
-body.dark-theme .card-title.comment-author {
-	color: #f1469c;
-}
-
-body.dark-theme a {
-	color: #f1469c;
-}
-
-body.dark-theme .pagination .page-link {
-	color: #f1469c;
-	background-color: transparent;
-}
-
-body.dark-theme .pagination .page-link:hover, body.dark-theme .pagination .page-link.current {
-	color: #FFFFFF;
-	background-color: #525289;
-}
-
-body.dark-theme .pagination .page-link.dots {
-	color: #FFFFFF;
-	background-color: transparent;
-}
-
-body.dark-theme .dropdown-item a {
-	color: #FFFFFF;
-}
